# life

./: .gitignore  Cargo.toml  README.md  before.txt  index.html  nuxt.config.js  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: vite-wasm.yml
benches/: bench.rs
components/: Controls.vue  Universe.vue
life/: Cargo.toml
life/src/: lib.rs  parser.rs  render.rs
modules/ngrok/: index.js
pages/: index.vue
reference/: Universe.vue
src/: App.css  App.jsx  App.tsx  Controls.jsx  Universe.jsx  lib.rs  main.jsx  main.tsx  render.rs  utils.rs
tests/: web.rs
wasm/: .gitignore  Cargo.toml  LICENSE
wasm/src/: lib.rs  parser.rs  render.rs
www/: index.html  index.js  package-lock.json  package.json  render.js
