[package]
name = "life"
version = "0.1.0"
authors = ["Jason Wiemels <jason.wiemels@gmail.com>"]
edition = "2021"
description = "A game of life implementation in Rust using wasm"
repository = "https://github.com/jason136/life"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
once_cell = "1.17.1"
regex = "1"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
debug = true